[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Nest.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/nest.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/death/0.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/death/1.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/death/2.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/death/3.png" type="Texture" id=6]
[ext_resource path="res://assets/enemies/death/4.png" type="Texture" id=7]
[ext_resource path="res://assets/enemies/death/5.png" type="Texture" id=8]
[ext_resource path="res://assets/enemies/death/6.png" type="Texture" id=9]
[ext_resource path="res://assets/sounds/mob_death.wav" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ null, ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), null ],
"loop": false,
"name": "default",
"speed": 13.0
} ]

[node name="Nest" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -46.9458, -53.1068, -10.4152, -61.4692, 16.4325, -63.2297, 41.0797, -60.5889, 57.3644, -46.945, 64.4064, -24.9386, 64.4064, 25.2359, 64.4064, 53.4041, 41.9599, 64.4073, 8.95038, 60.4461, -15.2566, 61.3264, -15.2566, 61.3264, -45.1853, 60.4461, -59.2694, 41.0805, -57.0687, 34.0385, -64.991, 19.5143, -56.6286, -23.6182, -63.2305, -31.5405 )

[node name="DeathAnmiation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 8

[node name="AudioDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[connection signal="animation_finished" from="DeathAnmiation" to="." method="_on_DeathAnmiation_animation_finished"]
